--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link href="css/main.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<h1>Media Query</h1>
+		<h1 class="hidden">"Media Query Example"</h1>
 		<!-- Content Goes Here -->
 		<div id="container">
 			<h2 class="hidden">"boxes"</h2>
